optimize code and icon