@@ -106,23 +106,23 @@ public class Mp4TagByteField extends Mp4TagTextField
             case 2:
             {
                 //Save as two bytes
-                Short shortValue = new Short(content);
-                byte rawData[] = Utils.getSizeBEInt16(shortValue);
+                Short shortValue = Short.valueOf(content);
+                byte[] rawData = Utils.getSizeBEInt16(shortValue);
                 return rawData;
             }
             case 1:
             {
                 //Save as 1 bytes
-                Short shortValue = new Short(content);
-                byte rawData[] = new byte[1];
+                Short shortValue = Short.valueOf(content);
+                byte[] rawData = new byte[1];
                 rawData[0] = shortValue.byteValue();
                 return rawData;
             }
             case 4:
             {
                 //Assume could be int
-                Integer intValue = new Integer(content);
-                byte rawData[] = Utils.getSizeBEInt32(intValue);
+                Integer intValue = Integer.valueOf(content);
+                byte[] rawData = Utils.getSizeBEInt32(intValue);
                 return rawData;
             }
             default:
