@@ -38,9 +38,9 @@ public class Mp4TrackField extends Mp4TagTextNumberField
         super(Mp4FieldKey.TRACK.getFieldName(), trackValue);
 
         numbers = new ArrayList<Short>();
-        numbers.add(new Short("0"));
+        numbers.add(Short.valueOf("0"));
 
-        String values[] = trackValue.split("/");
+        String[] values = trackValue.split("/");
         switch (values.length)
         {
             case 1:
@@ -52,8 +52,8 @@ public class Mp4TrackField extends Mp4TagTextNumberField
                 {
                     throw new FieldDataInvalidException("Value of:" + values[0] + " is invalid for field:" + id);
                 }
-                numbers.add(new Short("0"));
-                numbers.add(new Short("0"));
+                numbers.add(Short.valueOf("0"));
+                numbers.add(Short.valueOf("0"));
                 break;
 
             case 2:
@@ -73,7 +73,7 @@ public class Mp4TrackField extends Mp4TagTextNumberField
                 {
                     throw new FieldDataInvalidException("Value of:" + values[1] + " is invalid for field:" + id);
                 }
-                numbers.add(new Short("0"));
+                numbers.add(Short.valueOf("0"));
                 break;
 
             default:
@@ -92,10 +92,10 @@ public class Mp4TrackField extends Mp4TagTextNumberField
 
         super(Mp4FieldKey.TRACK.getFieldName(), String.valueOf(trackNo));
         numbers = new ArrayList<Short>();
-        numbers.add(new Short("0"));
+        numbers.add(Short.valueOf("0"));
         numbers.add((short) trackNo);
-        numbers.add(new Short("0"));
-        numbers.add(new Short("0"));
+        numbers.add(Short.valueOf("0"));
+        numbers.add(Short.valueOf("0"));
     }
 
     /**
@@ -108,10 +108,10 @@ public class Mp4TrackField extends Mp4TagTextNumberField
     {
         super(Mp4FieldKey.TRACK.getFieldName(), String.valueOf(trackNo));
         numbers = new ArrayList<Short>();
-        numbers.add(new Short("0"));
+        numbers.add(Short.valueOf("0"));
         numbers.add((short) trackNo);
         numbers.add((short) total);
-        numbers.add(new Short("0"));
+        numbers.add(Short.valueOf("0"));
     }
 
     /**
